refactor: cambio en unit test para la concordancia con los cambios hechos en gestor.java